# FFAA

./: .gitignore  README.md  eval.py  eval_llava.py  inference.py  pyproject.toml  train_mids.py  visualize.py
docs/: MODEL_ZOO.md  benchmark.md  dataset.md
llava/: conversation.py
llava/model/language_model/: llava_llama.py
llava/model/multimodal_encoder/: clip_encoder.py
llava/train/: train.py
mids/: basic_module.py  mids_arch.py  mids_visual.py  selector.py
playground/: prompts.txt
scripts/: merge_lora_weights.py
scripts/train/: finetune_mistral_lora.sh  finetune_phi_lora.sh  train_mids_v1.sh
utils/: __init__.py  file_utils.py  llava_utils.py  mids_utils.py
